[package]
name = "rust_examples"
version = "0.1.0"
authors = ["Rui Loura <rjloura@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.99", features = ["derive"]}

serde_json = "1.0.40"

# Diesel:
diesel = {version = "1.4.2", features = ["sqlite"]}
dotenv = "0.14.1"
libmanta = { git = "https://github.com/joyent/rust-libmanta" }
diesel-derive-enum = {git = "https://github.com/adwhit/diesel-derive-enum.git", features = ["sqlite"]}
uuid = "0.7.4"
crossbeam-deque = "0.7.1"
reqwest = "0.9.20"
crossbeam-channel = "0.3.9"
rand = "0.7.2"
threadpool = "1.7.1"
strum = "0.16.0"
strum_macros = "0.16.0"
signal-hook = "0.1.13"
mustache = {git = "https://github.com/nickel-org/rust-mustache", branch = "issue-60" }
handlebars = "3.0.1"

[patch.crates-io]
# diesel Example:
diesel = { git = 'https://github.com/diesel-rs/diesel' }
diesel_derives = { git = "https://github.com/diesel-rs/diesel" }

